--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,12 @@
 			</exclusions>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-freemarker</artifactId>
+			<version>1.4.1.RELEASE</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
