--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
 		<cn21-framework.version>1.0.6</cn21-framework.version>
 		<cn21-zhptOpenCommon.version>1.2</cn21-zhptOpenCommon.version>
 		<commons-email.version>1.3.2</commons-email.version>
+		<fastjson.version>1.2.28</fastjson.version>
 	</properties>
 
 	<dependencies>
@@ -87,6 +88,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-freemarker</artifactId>
 			<version>1.4.1.RELEASE</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>${fastjson.version}</version>
 		</dependency>
 
 	</dependencies>
